# dlai-starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  QUERY_FLOW_DIAGRAM.md  README.md  backend-tool-refactor.md  format.sh  frontend-changed.md  pyproject.toml  quality-check.sh
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_integration_real_system.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
